# PRIM-QtApp

./: .gitignore  PRIMAcquisition.spec  README.md  commandprompt.md  ideas.py  prim_app.spec  suggested_patch_snippet.txt
cameratest/: dump_camera_capabilities.py  main.py  preview_harvester.py
ic4_camera/: debug_camera_properties.py  dump_camera_capabilities.py  grab_one_frame.py  ic4_python.txt  ic4_test_basic.py  ic4_test_basic_debug.py  ic4_test_free_run.py  ic4_test_software_trigger.py  list_cameras.py  live_preview_qt.py  minimal.py  print_trigger_props.py  show_one_frame_qt.py  test_camera_properties.py
liveplotter/: app_settings.py  camera_profiler.py  main_window.py  prim_app.py  setup_wizard.py  test_ic4.py  utils.py
liveplotter/canvas/: camera_view.py
liveplotter/control_panels/: camera_control_panel.py
liveplotter/cpp_camera/: CMakeLists.txt  CameraManager.cpp  CameraManager.hpp  bindings.cpp
liveplotter/threads/: sdk_camera_thread.py
prim_app/: camera_app_opengl.py  debug_ic4_api.py  dump_ic4_structure.py  ic4_opencv_live.py  ic4_qt_live.py  ic4_test.py  ic4test.py  inspect_ic4_props.py  inspect_opencv_camera.py  list_camera_props.py  main_window.py  prim_app.py  probe_camera.py  read_metadata.py  recording.py  recording_manager.py  requirements.txt  test_camera_thread.py  test_ic4_camera.py  test_ic4_enum.py  test_opencv_camera.py
prim_app 2/: requirements.txt
prim_app 2/threads/: recording_thread.py
prim_app 2/utils/: utils.py
prim_app 3/threads/: sdk_camera_thread.py
prim_app working/: camera_app_opengl.py  ic4_opencv_live.py  main_window.py  prim_app.py  probe_camera.py  recording.py  test_camera_thread.py  test_ic4_enum.py
prim_app-2/utils/: config.py
prim_app-3/: camera_force_reset.py  gemini_standalone.py  main_window.py  test_camera_open.py
prim_app-3/threads/: sdk_camera_thread.py
prim_app-3/utils/: app_settings.py
prim_app/camera/: camera_profiler.py  setup_wizard.py
prim_app/threads/: opencv_camera_thread.py  (+3 more)
prim_app2/: main_window.py  prim_app.py
src/: camera_diagnostic.py  camera_info.py  camera_preview.py  config.py  device_info.py  errors.md  list_propids.py  main_window.py  pop_output_buffer.py  prim_app.py  recording.py  requirements.txt  style.qss  test_camera.py  test_ic4.py  test_tis.py  utils.py
test scripts/: png2ico.py  test_ic4_camera.py
tests/: test_recording_manager.py
(+45 files in other folders)
